--- a/curso_de_python_para_iniciantes.ipynb
+++ b/curso_de_python_para_iniciantes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOXInN7DswVU30S7l0GAjnw",
+      "authorship_tag": "ABX9TyMCjtjVB5sfLzq+L3LuljsN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1711,20 +1711,619 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [],
+      "cell_type": "code",
+      "source": [
+        "notas = {'português':8, 'inglês':7.4, 'matemática':9}\n",
+        "notas"
+      ],
       "metadata": {
-        "id": "AkY9OfmPffTI"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gGae35D3fRLk",
+        "outputId": "c935e1a6-241e-49bf-fad8-3f4494b20b34"
+      },
+      "execution_count": 158,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'português': 8, 'inglês': 7.4, 'matemática': 9}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 158
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pessoa = {'nome':'João', 'idade':25, 'profissão':'pinto'}\n",
+        "pessoa"
+      ],
+      "metadata": {
+        "id": "8yj4bw9Rm87o",
+        "outputId": "709a7d6a-100e-4bdb-a464-527650dcb746",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 160,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'nome': 'João', 'idade': 25, 'profissão': 'pinto'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 160
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "times = {1:'flamengo', 2:'São Paulo', 3:'Grêmio' }\n",
+        "times"
+      ],
+      "metadata": {
+        "id": "RvJz9PVjnSJT",
+        "outputId": "09df1589-6a41-4464-ecb6-0e18e73bd398",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 161,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{1: 'flamengo', 2: 'São Paulo', 3: 'Grêmio'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 161
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "notas['matemática']"
+      ],
+      "metadata": {
+        "id": "1npJ_uwln34r",
+        "outputId": "8039d1e6-12b4-45d9-ac33-d9b4872b0e9a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 162,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 162
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "notas['português']"
+      ],
+      "metadata": {
+        "id": "17beevDmoAQd",
+        "outputId": "4cfb7a9a-fd55-4558-ab49-4b49c9193deb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 163,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 163
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pessoa['nome']"
+      ],
+      "metadata": {
+        "id": "l65Np6cDoGn2",
+        "outputId": "544bdb3a-2f47-42e7-e03b-d7f4bd005783",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 165,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'João'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 165
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "times[3]"
+      ],
+      "metadata": {
+        "id": "aQmP-LQ5oWtz",
+        "outputId": "44213be5-bac4-4366-aa98-e3007d43949c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 166,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Grêmio'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 166
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "times[1]"
+      ],
+      "metadata": {
+        "id": "dfIq6wAAoiSs",
+        "outputId": "84ce542c-1f50-4f34-d89a-02edaf0ca130",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 171,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'flamengo'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 171
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> Alterando elementos"
+      ],
+      "metadata": {
+        "id": "rLE1olLRo2nu"
       }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "notas['matemática'] = 10\n",
+        "notas"
+      ],
       "metadata": {
-        "id": "gGae35D3fRLk"
+        "id": "k0BeXYlfomkC",
+        "outputId": "7fbce2af-cb76-4179-bb8e-78c045a2e888",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
+      "execution_count": 172,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'português': 8, 'inglês': 7.4, 'matemática': 10}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 172
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "times[2] = 'Palmeiras'"
+      ],
+      "metadata": {
+        "id": "7MScWbexpLyE"
+      },
+      "execution_count": 173,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "times"
+      ],
+      "metadata": {
+        "id": "duNq0BbApUeh",
+        "outputId": "4a9867be-a0c7-4788-96c5-adbe0604fbff",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 174,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{1: 'flamengo', 2: 'Palmeiras', 3: 'Grêmio'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 174
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ">> Alterando Elementos"
+      ],
+      "metadata": {
+        "id": "w85-WDwkpzBb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "notas['geografia'] = 7.1\n",
+        "notas"
+      ],
+      "metadata": {
+        "id": "xDTZuHFapuky",
+        "outputId": "8821677f-2ef0-441c-84dc-e35878e4df8f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 176,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'português': 8, 'inglês': 7.4, 'matemática': 10, 'geografia': 7.1}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 176
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "times[85] = 'Vasco'"
+      ],
+      "metadata": {
+        "id": "Z5RknYKhp-7R"
+      },
+      "execution_count": 177,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "times"
+      ],
+      "metadata": {
+        "id": "yYhqSyOPqLAi",
+        "outputId": "cca28a74-79ed-432a-bd4a-0075a0db7f15",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 178,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{1: 'flamengo', 2: 'Palmeiras', 3: 'Grêmio', 85: 'Vasco'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 178
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# IF / ELSE"
+      ],
+      "metadata": {
+        "id": "YYSBcDXBqSx6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 1\n",
+        "y = 5"
+      ],
+      "metadata": {
+        "id": "nNvmRt_QqMMY"
+      },
+      "execution_count": 180,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ">> Operadores Lógicos"
+      ],
+      "metadata": {
+        "id": "YzNHwWM0qkig"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x == 1"
+      ],
+      "metadata": {
+        "id": "pVuVmH9Pqnt7",
+        "outputId": "b9889ec5-6858-4518-c35e-9bc4d259cce3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 181,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 181
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x == 2"
+      ],
+      "metadata": {
+        "id": "rI6TSEsIq6cw",
+        "outputId": "528d0fd5-5050-4963-d9ed-186cd2a687f6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 182,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 182
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x < 0"
+      ],
+      "metadata": {
+        "id": "mZG-8LbGq9iU",
+        "outputId": "0f0cae7a-c7a1-4791-f65a-71e2ee0ebf48",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 183,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 183
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x >= 0"
+      ],
+      "metadata": {
+        "id": "PWJcnLTXrGS7",
+        "outputId": "95c5d68e-b31e-46f0-8942-de1d87c54ccc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 185,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 185
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x != 0"
+      ],
+      "metadata": {
+        "id": "Jx7nY0MVrXLm",
+        "outputId": "9b6a59b2-1546-4bbf-ade8-b0cf92aba8ac",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 186,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 186
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(x > 0) and (y < 2)"
+      ],
+      "metadata": {
+        "id": "mHaZiEynrcQB",
+        "outputId": "06b12485-72bb-4ecd-a1ad-1a54349182e6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 187,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 187
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(x > 0) or (y < 2)"
+      ],
+      "metadata": {
+        "id": "IrZd0lHGrptT",
+        "outputId": "850b722d-2bb0-4d2c-ccad-c94cd2b9fe88",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 188,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 188
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ">> Identação Obrigatória"
+      ],
+      "metadata": {
+        "id": "_epReUEIr3eG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " x = 5\n",
+        " if (x > 0):\n",
+        "    print(\"x é maior que zero\")"
+      ],
+      "metadata": {
+        "id": "p1botLKnr9gR",
+        "outputId": "d9ba0e8a-4e0d-454a-fa28-1f418f4faf12",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 203,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x é maior que zero\n"
+          ]
+        }
+      ]
     }
   ]
 }
