--- a/curso_de_python_para_iniciantes.ipynb
+++ b/curso_de_python_para_iniciantes.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMCjtjVB5sfLzq+L3LuljsN",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNAq1aRMNyA2WF5ll04eN/K"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/PericlesBritto/Google-colab_python/blob/main/curso_de_python_para_iniciantes.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -1744,11 +1733,11 @@
         "pessoa"
       ],
       "metadata": {
-        "id": "8yj4bw9Rm87o",
-        "outputId": "709a7d6a-100e-4bdb-a464-527650dcb746",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8yj4bw9Rm87o",
+        "outputId": "709a7d6a-100e-4bdb-a464-527650dcb746"
       },
       "execution_count": 160,
       "outputs": [
@@ -1771,11 +1760,11 @@
         "times"
       ],
       "metadata": {
-        "id": "RvJz9PVjnSJT",
-        "outputId": "09df1589-6a41-4464-ecb6-0e18e73bd398",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RvJz9PVjnSJT",
+        "outputId": "09df1589-6a41-4464-ecb6-0e18e73bd398"
       },
       "execution_count": 161,
       "outputs": [
@@ -1797,11 +1786,11 @@
         "notas['matemática']"
       ],
       "metadata": {
-        "id": "1npJ_uwln34r",
-        "outputId": "8039d1e6-12b4-45d9-ac33-d9b4872b0e9a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1npJ_uwln34r",
+        "outputId": "8039d1e6-12b4-45d9-ac33-d9b4872b0e9a"
       },
       "execution_count": 162,
       "outputs": [
@@ -1823,11 +1812,11 @@
         "notas['português']"
       ],
       "metadata": {
-        "id": "17beevDmoAQd",
-        "outputId": "4cfb7a9a-fd55-4558-ab49-4b49c9193deb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "17beevDmoAQd",
+        "outputId": "4cfb7a9a-fd55-4558-ab49-4b49c9193deb"
       },
       "execution_count": 163,
       "outputs": [
@@ -1849,12 +1838,12 @@
         "pessoa['nome']"
       ],
       "metadata": {
-        "id": "l65Np6cDoGn2",
-        "outputId": "544bdb3a-2f47-42e7-e03b-d7f4bd005783",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "l65Np6cDoGn2",
+        "outputId": "544bdb3a-2f47-42e7-e03b-d7f4bd005783"
       },
       "execution_count": 165,
       "outputs": [
@@ -1879,12 +1868,12 @@
         "times[3]"
       ],
       "metadata": {
-        "id": "aQmP-LQ5oWtz",
-        "outputId": "44213be5-bac4-4366-aa98-e3007d43949c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "aQmP-LQ5oWtz",
+        "outputId": "44213be5-bac4-4366-aa98-e3007d43949c"
       },
       "execution_count": 166,
       "outputs": [
@@ -1909,12 +1898,12 @@
         "times[1]"
       ],
       "metadata": {
-        "id": "dfIq6wAAoiSs",
-        "outputId": "84ce542c-1f50-4f34-d89a-02edaf0ca130",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "dfIq6wAAoiSs",
+        "outputId": "84ce542c-1f50-4f34-d89a-02edaf0ca130"
       },
       "execution_count": 171,
       "outputs": [
@@ -1949,11 +1938,11 @@
         "notas"
       ],
       "metadata": {
-        "id": "k0BeXYlfomkC",
-        "outputId": "7fbce2af-cb76-4179-bb8e-78c045a2e888",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "k0BeXYlfomkC",
+        "outputId": "7fbce2af-cb76-4179-bb8e-78c045a2e888"
       },
       "execution_count": 172,
       "outputs": [
@@ -1986,11 +1975,11 @@
         "times"
       ],
       "metadata": {
-        "id": "duNq0BbApUeh",
-        "outputId": "4a9867be-a0c7-4788-96c5-adbe0604fbff",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "duNq0BbApUeh",
+        "outputId": "4a9867be-a0c7-4788-96c5-adbe0604fbff"
       },
       "execution_count": 174,
       "outputs": [
@@ -2022,11 +2011,11 @@
         "notas"
       ],
       "metadata": {
-        "id": "xDTZuHFapuky",
-        "outputId": "8821677f-2ef0-441c-84dc-e35878e4df8f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xDTZuHFapuky",
+        "outputId": "8821677f-2ef0-441c-84dc-e35878e4df8f"
       },
       "execution_count": 176,
       "outputs": [
@@ -2059,11 +2048,11 @@
         "times"
       ],
       "metadata": {
-        "id": "yYhqSyOPqLAi",
-        "outputId": "cca28a74-79ed-432a-bd4a-0075a0db7f15",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yYhqSyOPqLAi",
+        "outputId": "cca28a74-79ed-432a-bd4a-0075a0db7f15"
       },
       "execution_count": 178,
       "outputs": [
@@ -2115,11 +2104,11 @@
         "x == 1"
       ],
       "metadata": {
-        "id": "pVuVmH9Pqnt7",
-        "outputId": "b9889ec5-6858-4518-c35e-9bc4d259cce3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pVuVmH9Pqnt7",
+        "outputId": "b9889ec5-6858-4518-c35e-9bc4d259cce3"
       },
       "execution_count": 181,
       "outputs": [
@@ -2141,11 +2130,11 @@
         "x == 2"
       ],
       "metadata": {
-        "id": "rI6TSEsIq6cw",
-        "outputId": "528d0fd5-5050-4963-d9ed-186cd2a687f6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rI6TSEsIq6cw",
+        "outputId": "528d0fd5-5050-4963-d9ed-186cd2a687f6"
       },
       "execution_count": 182,
       "outputs": [
@@ -2167,11 +2156,11 @@
         "x < 0"
       ],
       "metadata": {
-        "id": "mZG-8LbGq9iU",
-        "outputId": "0f0cae7a-c7a1-4791-f65a-71e2ee0ebf48",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mZG-8LbGq9iU",
+        "outputId": "0f0cae7a-c7a1-4791-f65a-71e2ee0ebf48"
       },
       "execution_count": 183,
       "outputs": [
@@ -2193,11 +2182,11 @@
         "x >= 0"
       ],
       "metadata": {
-        "id": "PWJcnLTXrGS7",
-        "outputId": "95c5d68e-b31e-46f0-8942-de1d87c54ccc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PWJcnLTXrGS7",
+        "outputId": "95c5d68e-b31e-46f0-8942-de1d87c54ccc"
       },
       "execution_count": 185,
       "outputs": [
@@ -2219,11 +2208,11 @@
         "x != 0"
       ],
       "metadata": {
-        "id": "Jx7nY0MVrXLm",
-        "outputId": "9b6a59b2-1546-4bbf-ade8-b0cf92aba8ac",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Jx7nY0MVrXLm",
+        "outputId": "9b6a59b2-1546-4bbf-ade8-b0cf92aba8ac"
       },
       "execution_count": 186,
       "outputs": [
@@ -2245,11 +2234,11 @@
         "(x > 0) and (y < 2)"
       ],
       "metadata": {
-        "id": "mHaZiEynrcQB",
-        "outputId": "06b12485-72bb-4ecd-a1ad-1a54349182e6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mHaZiEynrcQB",
+        "outputId": "06b12485-72bb-4ecd-a1ad-1a54349182e6"
       },
       "execution_count": 187,
       "outputs": [
@@ -2271,11 +2260,11 @@
         "(x > 0) or (y < 2)"
       ],
       "metadata": {
-        "id": "IrZd0lHGrptT",
-        "outputId": "850b722d-2bb0-4d2c-ccad-c94cd2b9fe88",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "IrZd0lHGrptT",
+        "outputId": "850b722d-2bb0-4d2c-ccad-c94cd2b9fe88"
       },
       "execution_count": 188,
       "outputs": [
@@ -2303,24 +2292,55 @@
     {
       "cell_type": "code",
       "source": [
-        " x = 5\n",
-        " if (x > 0):\n",
-        "    print(\"x é maior que zero\")"
+        "x = 0\n",
+        "if (x > 0):\n",
+        "    print(\"x é maior que zero\")\n",
+        "else:\n",
+        "    print('x é menor ou igual a 0')"
       ],
       "metadata": {
-        "id": "p1botLKnr9gR",
-        "outputId": "d9ba0e8a-4e0d-454a-fa28-1f418f4faf12",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "p1botLKnr9gR",
+        "outputId": "f90d8d8f-f105-495a-8829-0853b99d35bc"
       },
-      "execution_count": 203,
+      "execution_count": 211,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "x é maior que zero\n"
+            "x é menor ou igual a 0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = -5\n",
+        "if (x > 0):\n",
+        "    print(\"x é maior que zero\")\n",
+        "elif(x == 0):\n",
+        "    print(\"x é zero\")\n",
+        "else:\n",
+        "    print('x é menor 0')"
+      ],
+      "metadata": {
+        "id": "70Ow672FvMtq",
+        "outputId": "a945ec47-f01d-4900-f120-3651fea13435",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 214,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x é menor 0\n"
           ]
         }
       ]
